<resources>
    <string name="app_name">CarFaxApplication</string>
    <string name="car_image">Car Image</string>
    <string name="vehicle_info">Vehicle Info</string>
    <string name="location">Location</string>
    <string name="call_dealer">Call Dealer</string>
    <string name="exterior_color">Exterior Color</string>
    <string name="interior_color">Interior Color</string>
    <string name="drive_type">Drive Type</string>
    <string name="transmission">Transmission</string>
    <string name="body_style">Body Style</string>
    <string name="engine">Engine</string>
    <string name="fuel">Fuel</string>

</resources>