<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/gray"
        tools:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/drink_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/image">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_gray"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_info"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_layout">

                <LinearLayout
                    android:id="@+id/locationLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/locationTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/location" />

                    <TextView
                        android:id="@+id/locationValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/exLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/locationLL"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/exColor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="@string/exterior_color" />

                    <TextView
                        android:id="@+id/exeValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/interLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/exLL"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/interiorTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="@string/interior_color" />

                    <TextView
                        android:id="@+id/interValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/driveLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/interLL"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/driveTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="@string/drive_type" />

                    <TextView
                        android:id="@+id/driveValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/transLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/driveLL"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/transTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="@string/transmission" />

                    <TextView
                        android:id="@+id/transValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bodyLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/transLL"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bodyTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="@string/body_style" />

                    <TextView
                        android:id="@+id/bodyValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/engineLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bodyLL"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/engineTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="@string/engine" />

                    <TextView
                        android:id="@+id/engineValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fuelLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/engineLL"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fuelTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="@string/fuel" />

                    <TextView
                        android:id="@+id/fuelValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:textColor="@color/black" />


                </LinearLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/fuelLL"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/gray_dark" />

                <Button
                    android:id="@+id/callButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="18dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/call_dealer"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>